k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threads
  namespace: prakarsa
  labels:
    app: threads
spec:
  replicas: 1
  selector:
    matchLabels:
      app: threads
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: threads
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: threads
          image: ghcr.io/sfdaus/threads:latest   # akan dioverride di step set image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
