k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: threads
  namespace: prakarsa
  labels:
    app: threads
spec:
  type: ClusterIP
  selector:
    app: threads
  ports:
    - name: http
      port: 80
      targetPort: 8080
